test/classes/errors/nilability-init-var/init-var-nonnil-unmanaged-from-oknil-shared.good
init-var-nonnil-unmanaged-from-oknil-shared.chpl:9: error: cannot initialize variable 'lhs' of non-nilable type 'unmanaged MyClass' from a nilable 'shared MyClass?'
